--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ playground.xcworkspace
 # Pods/
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
+Pods/
 # *.xcworkspace
 
 # Carthage
